--- a/dev/docker/Dockerfile
+++ b/dev/docker/Dockerfile
@@ -17,7 +17,4 @@
 # under the License.
 #
 
-FROM maven:3.8.6-eclipse-temurin-11
-
-RUN apt-get update
-RUN apt-get install -y g++ cmake
+FROM maven:3.5.0-jdk-8
