--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -21,26 +21,16 @@
   <parent>
     <groupId>org.apache.bookkeeper</groupId>
     <artifactId>bookkeeper</artifactId>
-    <version>4.16.0-SNAPSHOT</version>
+    <version>4.6.0</version>
   </parent>
   <groupId>org.apache.bookkeeper.tests</groupId>
   <artifactId>tests-parent</artifactId>
   <name>Apache BookKeeper :: Tests</name>
-
-  <properties>
-    <groovy.version>3.0.11</groovy.version>
-  </properties>
-
   <modules>
-    <module>shaded</module>
-    <module>docker-images</module>
-    <module>integration-tests-base</module>
-    <module>integration-tests-base-groovy</module>
-    <module>integration-tests-utils</module>
-    <module>integration-tests-topologies</module>
-    <module>backward-compat</module>
-    <module>integration</module>
-    <module>scripts</module>
+    <module>bookkeeper-server-compat-4.0.0</module>
+    <module>bookkeeper-server-compat-4.1.0</module>
+    <module>bookkeeper-server-compat-4.2.0</module>
+    <module>backward</module>
   </modules>
   <build>
     <plugins>
