--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -26,8 +26,6 @@ jobs:
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-    - name: maven version
-      run: mvn package
 
-    - name: Publish Jacoco Report
+    - name: Maven
       run: mvn clean verify -DskipTests
