--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -27,6 +27,8 @@ jobs:
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Maven
-      run: mvn clean verify -DskipTests
+      run: |
+        cd bookkeeper-server 
+        mvn clean verify -DskipTests
 
 
