--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -27,8 +27,6 @@ jobs:
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Maven
-      run: |
-        cd bookkeeper-server 
-        mvn clean verify -DskipTests -Dcheckstyle.skip
+      run:  mvn clean verify -DskipTests -Dcheckstyle.skip
 
 
