--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -28,7 +28,7 @@ jobs:
 
     - name: Build with Mave
       run: |
-        cd bookkeeper-common
+        cd bookkeeper-server
         mvn clean verify -DskipTests -Dcheckstyle.skip
 
 
