--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -27,6 +27,7 @@ jobs:
         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
     - name: Build with Mave
-      run: mvn clean verify -DskipTests -Dcheckstyle.skip
+      run: mvn -Dmaven.repo.mirror.url=https://repo1.maven.org/maven2/ clean install -DskipTests -Dcheckstyle.skip 
+
 
 
