--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,8 @@
         </developer>
     </developers>
     <properties>
+        <sonar.organization>giulia97-w</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!-- dependencies -->
