--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
         </developer>
     </developers>
     <properties>
+        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
         <sonar.organization>giulia97-w</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
