--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,54 +1,62 @@
-
-name: Maven Package
-
+name: SonarCloud
 on:
   push:
-  
+    branches:
+      - master
   pull_request:
     types: [opened, synchronize, reopened]
-
 jobs:
   build:
-
+    name: Build and analyze
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: 11
+          distribution: 'zulu' # Alternative distribution options are available.
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=giulia97-w_bookkeeper-1
 
 
-    - name: Modify Maven settings.xml
-      run: |
-        mkdir -p ~/.m2
-        echo '<?xml version="1.0" encoding="UTF-8"?>
-        <settings xmlns="http://maven.apache.org/SETTINGS/1.2.0"
-          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-          xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.2.0 https://maven.apache.org/xsd/settings-1.2.0.xsd">
-        <mirrors>
-          <mirror>
-            <id>maven-default-http-blocker</id>
-            <mirrorOf>external:dummy:*</mirrorOf>
-            <name>Pseudo repository to mirror external repositories initially using HTTP.</name>
-            <url>http://0.0.0.0/</url>
-            <blocked>true</blocked>
-          </mirror>
-        </mirrors>
-          </settings>
-          ' > ~/.m2/settings.xml
-        
-        
-    - name : mvn install
-      run: mvn sonar:sonar -Dsonar.branch.name=master
+      - name: Modify Maven settings.xml
+        run: |
+          mkdir -p ~/.m2
+          echo '<?xml version="1.0" encoding="UTF-8"?>
+          <settings xmlns="http://maven.apache.org/SETTINGS/1.2.0"
+            xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+            xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.2.0 https://maven.apache.org/xsd/settings-1.2.0.xsd">
+          <mirrors>
+            <mirror>
+              <id>maven-default-http-blocker</id>
+              <mirrorOf>external:dummy:*</mirrorOf>
+              <name>Pseudo repository to mirror external repositories initially using HTTP.</name>
+              <url>http://0.0.0.0/</url>
+              <blocked>true</blocked>
+            </mirror>
+          </mirrors>
+            </settings>
+            ' > ~/.m2/settings.xml
 
+ 
 
  
 
