--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -49,7 +49,7 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       
-      - name: ba-dua
+      - name: ba-dua coverage
 
         run: java -jar dfc/ba-dua-cli-0.2.0-all.jar report -input bookkeeper-server/target/badua.ser -classes /Users/giuliamenichini/Documents/bookkeeper-1/bookkeeper-server/target/classes -show-classes -show-methods -xml bookkeeper-server/badua.xml
 
