--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -50,7 +50,7 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build 
 
-        run: mvn test
+        run: mvn test -Pba-dua-coverage
       - name: ba-dua coverage
 
         run: java -jar dfc/ba-dua-cli-0.2.0-all.jar report -input bookkeeper-server/badua.ser -classes bookkeeper-server/target/classes -show-classes -show-methods -xml bookkeeper-server/badua.xml
