--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: 8
+          java-version: 11
           distribution: 'zulu' # Alternative distribution options are available.
       - name: Modify Maven settings.xml
         run: |
@@ -50,9 +50,7 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build 
 
-        run: |
-            mvn compile
-            mvn test -Pba-dua-coverage
+        run: mvn test -Pba-dua-coverage
       
 
       - name: Save Jacoco and Pit Reports
