--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -596,41 +596,29 @@
       </build>
     </profile>
     <profile>
-          <id>ba-dua-coverage</id>
-          <activation>
-            <activeByDefault>false</activeByDefault>
-          </activation>
-          <properties>
-            <!-- Use a stable version istead of SNAPSHOT one -->
-            <ba-dua.version>0.2.0</ba-dua.version>
-            <argLine>-javaagent:dfc/ba-dua-agent-rt-${ba-dua.version}-all.jar -Doutput.file=target/badua.ser</argLine>
-          </properties>
-          <!-- Needed for generate the report -->
-          <build>
-              <plugins>
-                  
-                  <!-- Copy ba-dua-agent-rt from .m2 directory to target/dependency -->
-                  <plugin>
-                      <groupId>org.codehaus.mojo</groupId>
-                      <artifactId>exec-maven-plugin</artifactId>
-                      <version>1.5.0</version>
-                      <executions>
-                          <execution>
-                              <id>Generate Ba-Dua report</id>
-                              <goals>
-                                  <goal>exec</goal>
-                              </goals>
-                              <phase>verify</phase>
-                              <configuration>
-                                  <workingDirectory>${project.basedir}</workingDirectory>
-                                  <executable>dfc/generate-report.sh</executable>
-                              </configuration>
-                          </execution>
-                      </executions>
-                  </plugin>
-              </plugins>
-              </build>
-              </profile>
+                    <id>data-flow-test</id>
+                    <build>
+                        <plugins>
+                            <plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
+                                <artifactId>maven-surefire-plugin</artifactId>
+                                <executions>
+                                    <execution>
+                                        <goals>
+                                            <goal>test</goal>
+                                        </goals>
+                                    </execution>
+                                </executions>
+                                <configuration>
+                                    <argLine>
+                                        -javaagent:dfc/ba-dua-agent-rt-0.2.0-all.jar
+                                        
+                                    </argLine>
+                                </configuration>
+                            </plugin>
+                        </plugins>
+                    </build>
+                </profile>
 <profile>
       <id>dev-debug</id>
       <build>
